--- a/Coffee/style.css
+++ b/Coffee/style.css
@@ -7,6 +7,54 @@
 html {
 	scroll-behavior: smooth;
 }
+/* }
+.cup{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(50%,-50%);
+	width: 150px;
+	height: 180px;
+	border: 6px solid #fff;
+	border-top: 2px solid transparent;
+	border-radius: 15px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	background: url(./Image/kisspng-coffee-cafe-espresso-cappuccino-caffè-mocha-coffee-5a6c9ae469f1c4.874993641517066980434.png);
+	
+    background-repeat: no-repeat;
+    background-size: cover;
+	animation: preloader 10s linear infinite;
+	box-shadow: 0 0 0 6px #fff,0 20px 35 px rgba(0,0,0,1);
+}
+.cup::before{
+	content: "";
+	position: absolute;
+	width: 50px;
+	height: 80px;
+	border: 6px solid #fff;
+	right: -68px;
+	top: 30px;
+	border-top-right-radius: 35px;
+	border-bottom-right-radius: 35px;
+}
+@keyframes preloader {
+	0%{
+		background-position: 0 100px;
+	}
+	10%{
+		background-position: 0 100px;
+	}
+	40%{
+		background-position: 1000px -70px;
+	}
+	80%{
+		background-position: 2000px -80px;
+	}
+	100%{
+		background-position: 2500px 100px;
+	}
+} */
 .fa-mug-hot {
 	color: maroon;
 	text-shadow: 0px 0px 10px black;
