--- a/LoanApplication/style.css
+++ b/LoanApplication/style.css
@@ -248,6 +248,8 @@ input:invalid {
 	border: 1px solid rgb(155, 230, 43);
 	font-size: 1rem;
 	border-radius: 5px;
+	box-shadow: 0px 0px 2px black;
+	cursor: pointer;
 }
 
 .attemptCount {
